logs/omnikey2ivy.log
Listing '.'...
Listing './bin'...
Compiling './bin/ivyprobe.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ivy'...
Listing './lib/python3.5/site-packages/ivy_python-3.1.egg-info'...
Listing './lib/python3.5/site-packages/omnikey2ivy'...
Listing './lib/python3.5/site-packages/omnikey2ivy/RFIDIOt'...
Compiling './lib/python3.5/site-packages/omnikey2ivy/RFIDIOt/RFIDIOt.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (RFIDIOt.py, line 26)
Compiling './lib/python3.5/site-packages/omnikey2ivy/RFIDIOt/RFIDIOtconfig.py'...
***   File "./lib/python3.5/site-packages/omnikey2ivy/RFIDIOt/RFIDIOtconfig.py", line 87
    print '\nRFIDIOt Options:\n'
                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/omnikey2ivy/RFIDIOt/pynfc.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (pynfc.py, line 104)
Compiling './lib/python3.5/site-packages/omnikey2ivy/omnikey2ivy.py'...
***   File "./lib/python3.5/site-packages/omnikey2ivy/omnikey2ivy.py", line 59
    print "Ivy will broadcast on %s "%sechoivybus
                                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/omnikey2ivy-0.1.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
